--- a/RSA_and_Elgamal.ipynb
+++ b/RSA_and_Elgamal.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
        "'Let me come in where you are weeping, friend, And let me take your hand. I, who have known a sorrow such as yours, Can understand... '"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,14 +203,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "class RSA:\n",
-    "    def __init__(self, p ,q, e):\n",
+    "    def __init__(self, e):\n",
     "        \"\"\"\n",
-    "        Initialise the ElGamal with the prime 'p' and 'q'.\n",
+    "        Initialise class with exponent e. \n",
+    "        \"\"\"\n",
+    "        self.e = e\n",
+    "    \n",
+    "    def key(self, p, q):\n",
+    "        \"\"\"\n",
+    "        Calculate public key.\n",
     "        \"\"\"\n",
     "\n",
     "        self.p = p # private key p\n",
@@ -218,25 +224,19 @@
     "        self.N = self.p*self.q # public key\n",
     "\n",
     "        # Check encryption conponent is compntaible with secret keys\n",
-    "        x, y, gcd = extended_gcd(e,(p - 1)*(q - 1))\n",
+    "        x, y, gcd = extended_gcd(self.e,(p - 1)*(q - 1))\n",
     "        if gcd == 1:\n",
-    "            self.e = e\n",
+    "            return [self.N, self.e]\n",
     "        else:\n",
-    "            raise ValueError(\"Invalid encryption exponent.\")\n",
-    "    \n",
-    "    def key(self):\n",
-    "        \"\"\"\n",
-    "        Return public keys.\n",
-    "        \"\"\"\n",
+    "            raise ValueError(\"Private Keys incompatible with encryption exponent.\")\n",
     "\n",
-    "        public_key = [self.N, self.e]\n",
-    "\n",
-    "        return public_key\n",
     "\n",
     "    def encrypt(self, public_key, plain_text):\n",
     "        \"\"\"\n",
     "        Encrypt plain text and return ciphertext. \n",
     "        \"\"\"\n",
+    "\n",
+    "        self.N, self.e = public_key\n",
     "\n",
     "        # Encode plaintext as an integer \n",
     "        self.z = encode_message(plain_text)\n",
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
        "'Let me come in - I would be very still. Beside you in your grief; I would not bid you cease your weeping, friend, Tears can bring relief.'"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,11 +292,11 @@
     "e = 65537\n",
     "\n",
     "# Alice generates sa public key\n",
-    "Alice = RSA(p,q,e) \n",
-    "A = Alice.key() \n",
+    "Alice = RSA(e) \n",
+    "A = Alice.key(p,q) \n",
     "\n",
     "# Bob encrypts a message using Alice's public key\n",
-    "Bob = RSA(p,q,e)\n",
+    "Bob = RSA(e)\n",
     "message = \"Let me come in - I would be very still. Beside you in your grief; I would not bid you cease your weeping, friend, Tears can bring relief.\"\n",
     "\n",
     "c = Bob.encrypt(A, message) # Encrypt 'b' with Alice's public key A\n",
